--- a/Textos.html
+++ b/Textos.html
@@ -11,6 +11,6 @@
 <h3>Esta es una etiqueta H3. Utilízala en sub-secciones.</h3>
 <h4>Esta es una etiqueta H4. No se usan muy a menudo.</h4>
 <h5>Esta es una etiqueta H5.</h5>
-<h6>Esta es una etiqueta H6.</h6>
+<h6>Esta es una etiqueta H6ssss.</h6>
 	</body>
 </html>
