--- a/Textos.html
+++ b/Textos.html
@@ -10,7 +10,7 @@
 <h2>Esta es una etiqueta H2. Utilízala en los encabezados de secciones.</h2>
 <h3>Esta es una etiqueta H3. Utilízala en sub-secciones.</h3>
 <h4>Esta es una etiqueta H4. No se usan muy a menudo.</h4>
-<h5>Esta es una etiqueta H5.</h5>
+<h5>Esta es una etiqueta H5 develop.</h5>
 <h6>Esta es una etiqueta H6ssss.</h6>
 	</body>
 </html>
